@@ -1,2 +1,6 @@
 [BUILDDEB]
 native = true
+
+[HOOKS]
+pre-export = ./prepare-release pre-export
+post-build = ./prepare-release post-build
