@@ -51,8 +51,12 @@ apt (0.8.16~exp14) UNRELEASED; urgency=low
     - bump Standards-Version to 3.9.3 (no changes needed)
   * doc/apt-get.8.xml:
     - typofix: respect → respecting, thanks Mike Erickson! (Closes: #664833)
+  * debian/rules:
+    - do not sed in configure.in to set the version-number
+  * prepare-release:
+    - add as a small script to lazy check and prepare releases
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 22 Mar 2012 12:53:34 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 22 Mar 2012 19:23:57 +0100
 
 apt (0.8.16~exp13) experimental; urgency=low
 
